# kaka

./: .env.example  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  coverage.json  dev_setup.sh  pyproject.toml  requirements.txt  setup.py
app/: cli.py  config.py  main.py  setup_env.py
app/api/: config.py  dashboard.py  health.py  logs.py  tasks.py
app/core/: dependencies.py  error_handlers.py  exceptions.py
app/db/: __init__.py  database.py  models.py
app/models/: github_events.py
app/services/: claude_service.py  git_service.py  github_service.py  process_manager.py  task_service.py  webhook_handler.py
app/templates/: config_wizard.html  dashboard.html  dashboard_enhanced.html  task_detail.html
app/utils/: concurrency.py  logger.py  validators.py  webhook.py
config/: config.yaml
docs/: AI-dev-plan.md  AI开发调度服务实施计划.md  API.md  ARCHITECTURE.md  CONCURRENCY.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LOGGING.md  P0-P1完成报告.md  PUBLISHING.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  mvp-refactor-plan.md  refactor-plan-b.md  开发进度报告.md  阶段2完成报告.md
scripts/: demo.sh  dev.sh  generate_performance_report.py  install.sh  run_e2e_tests.sh  setup.sh  setup_env.py  test_concurrency.py  test_integration_live.py
tests/: conftest.py  test_api.py  test_api_README.md  test_authorization.py  test_claude_service.py  test_claude_service_success_logic.py  test_concurrency_thread_safety.py  test_data_leakage.py  test_e2e_scenarios.py  test_error_message_handling.py  test_git_service.py  test_github_rate_limit_check.py  test_github_service.py  test_input_validation.py  test_integration.py  test_performance.py  test_security.py  test_setup_env.py  test_validators.py  test_webhook_handler.py
tests/api/: __init__.py  test_config_api.py  test_dashboard_api.py  test_health_api.py  test_logs_api.py  test_tasks_api.py
